--- a/package.json
+++ b/package.json
@@ -13,32 +13,44 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.0",
-    "concurrently": "^8.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "js-cookie": "^3.0.5",
     "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22",
+    "pg": "^8.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "style-loader": "^3.3.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "babel-jest": "^29.6.0",
     "babel-loader": "^9.1.2",
+    "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "eslint": "^7.12.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
+    "jest-puppeteer": "^9.0.0",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
+    "puppeteer": "^20.7.4",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "supertest": "^6.3.3",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
