--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --open",
     "build": "webpack",
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\""
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\"",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.0",
@@ -27,12 +30,17 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "uuid": "^9.0.0"
+    "regenerator-runtime": "^0.13.9",
+    "uuid": "^9.0.0",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
+    "@babel/core": "^7.22.6",
+    "@babel/preset-env": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.6.0",
     "babel-loader": "^9.1.2",
     "concurrently": "^8.2.0",
