--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\"",
     "test": "jest --verbose"
   },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy" 
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -31,10 +38,10 @@
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "regenerator-runtime": "^0.13.9",
-    "uuid": "^9.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.6",
@@ -48,6 +55,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^7.12.0",
     "html-webpack-plugin": "^5.5.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^29.6.0",
     "jest-puppeteer": "^9.0.0",
