--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "scratch-poject",
-  "version": "1.0.0",
+  "name": "mewantfood",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,16 +12,13 @@
   "jest": {
     "testEnvironment": "jest-environment-jsdom",
     "moduleNameMapper": {
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy" 
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
     }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.0",
@@ -39,15 +36,15 @@
     "react-router-dom": "^6.14.0",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.63.6",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.6",
     "@babel/preset-env": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^13.5.0",
     "babel-jest": "^29.6.0",
     "babel-loader": "^9.1.2",
     "concurrently": "^8.2.0",
